manifests/seraphim/prod/gateway/Gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: ash
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.scarey.me'
      name: me-scarey-apps-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: me-scarey-apps-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: scarey.me
      name: me-scarey-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: me-scarey-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.vegapunk.cloud'
      name: cloud-vegapunk-apps-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: cloud-vegapunk-apps-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: vegapunk.cloud
      name: cloud-vegapunk-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: cloud-vegapunk-tls
        mode: Terminate
