manifests/seraphim/prod/gateway/Gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: internal
  namespace: gateway
spec:
  gatewayClassName: internal
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.10.21.11
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.vegapunk.cloud'
      name: apps-vegapunk-cloud-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: apps-vegapunk-cloud-tls
        mode: Terminate
